--- a/about.css
+++ b/about.css
@@ -1,69 +1,54 @@
+body {
+    height: 150vh;
+}
+
 .aboutheader {
-    position: relative;
+    margin-top: 90px;
     font-size: 100px;
     text-align: center;
-    top: 10%;
     width: 100%;
 }
 
 .aboutdescription {
     font-family: Arial, sans-serif;
-    position: relative;
     text-align: center;
     color: gray;
     font-size: 20px;
-    left: 50%;
-    transform: translate(-50%);
-    top: 10%;
-    width: 50%;
+    width: 100%;
 }
 
-.aboutmaincontainer {
-    display: none;
-    justify-content: center;
+.aboutlogsmaincontainer {
+    display: flex;
     align-items: center;
-    margin: 0;
-    padding: 0;
-    left: 0%;
-    top: 15%;
+    justify-content: center;
     width: 100%;
-    height: 50%;
+    height: 600px;
 }
 
-.aboutmainleftbutton {
-    position: absolute;
-    background: rgb(240, 240, 240);
-    cursor: pointer;
-    border: 1px solid;
-    border-radius: 5px;
-    left: 1%;
-    width: 5%;
+.aboutlogsmaincontainercontent {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px;
     height: 100%;
-
+    width: 60%;
+    gap: 20px;
 }
 
-.aboutmainrightbutton {
-    position: absolute;
-    background: rgb(240, 240, 240);
-    cursor: pointer;
-    border: 1px solid;
-    border-radius: 5px;
-    right: 1%;
-    width: 5%;
-    height: 100%;
-}
-
-.aboutleftbutton {
-    transform: rotate(90deg);
+.aboutlogsmaincontainercontentdivider {
+    overflow-y: auto;
     width: 100%;
+    height: 80%;
 }
 
-.aboutrightbutton {
-    transform: rotate(-90deg);
-    width: 100%;
+.aboutlogsmaincontainercontentupdate {
+    padding-left: 20px;
+    font-size: 20px;
 }
 
-.aboutmainimage {
-    position: relative;
-    height: 90%;
+.aboutlogsmaincontainercontentupdatedescription {
+    padding-left: 40px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(82, 82, 82);
 }
