--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body {
 }
 
 .profilecontainer {
+    grid-area: 1 / 1;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -45,8 +46,49 @@ body {
     height: 100%;
 }
 
-.profilemain {
+.logoutcontainer {
+    text-decoration: none;
+    margin-top: 10px;
+    grid-area: 1 / 1;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    right: 1%;
+    width: 10%;
+    height: 100%;
+    top: 100%;
+}
+
+.logoutmain {
+    text-decoration: none;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid gray;
+    cursor: pointer;
+    gap: 10px;
+    border-radius: 10px;
+    height: 80%;
+    width: 100%;
+    background: rgb(248, 248, 248);
+}
+
+.logoutmainicon {
+    height: 50%;
+}
+
+.logoutmainindex {
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+}
+
+.logoutmainindex:hover {
+    text-decoration: underline;
+}
+
+
+.profilemain {
     justify-content: center;
     align-items: center;
     border: 1px solid gray;
@@ -227,4 +269,49 @@ body {
 
 .labelforemail {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.spacingbetweenfooterandstuff {
+    width: 100%;
+    height: 1200px;
+}
+
+.footerdetails {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+    width: 100%;
+    background: white;
+    box-shadow: 0px 0px 10px;
+    height: 150px;
+    z-index: 9;
+}
+
+.footerandstuffcontainer {
+    height: 90%;
+    width: 98%;
+}
+
+.foooterandstufftitle {
+    font-size: 25px;
+}
+
+.foooterandstuffdescription {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(49, 49, 49);
+}
+
+.seemorelinks {
+    width: 80px;
+    margin-left: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: gray;
+    text-decoration: none;
+}
+
+.seemorelinks:hover {
+    color: rgb(55, 35, 235);
 }
