--- a/home.css
+++ b/home.css
@@ -1,3 +1,7 @@
+body {
+    height: 200vh;
+}
+
 .mainhomecontainer {
     display: flex;
     align-items: center;
@@ -8,7 +12,7 @@
 }
 
 .mainhomecontainercontent {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
@@ -92,4 +96,53 @@
 .iconbuttons:hover {
     transform: scale(1.03);
     transition: 0.3s;
+}
+
+.hiddenhomecontainer {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    width: 100%;
+    height: 830px;
+}
+
+.homecontainermain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    width: 100%;
+    height: 830px;
+}
+
+.homecontainermaincontent {
+    width: 90%;
+    height: 100%;
+}
+
+.homecontainermaincontenttitle {
+    width: 100%;
+    font-size: 100px;
+    text-align: center;
+}
+
+.homecontainermaincontentdescription {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    text-align: center;
+}
+
+.video {
+    width: 100%;
+}
+
+.videocontainer {
+    width: 100%;
+}
+
+.homecontentcontainernew {
+    width: 100%;
+    height: 200px;
+    box-shadow: 0px 0px 10px;
 }
