--- a/product.css
+++ b/product.css
@@ -136,7 +136,7 @@ body {
 }
 
 .featuredimageoverlay {
-    background: linear-gradient(to top, black, transparent);
+    background: linear-gradient(to top, rgb(0, 0, 0), transparent);
     grid-area: 1 / 1;
     pointer-events: none;
     width: 100%;
