--- a/index.css
+++ b/index.css
@@ -141,10 +141,25 @@ body {
     background: rgb(226, 226, 226);
     color: black;
     cursor: pointer;
-    border: 1px solid rgb(112, 112, 112);
     border-radius: 10px;
     height: 55%;
     width: 100%;
+}
+
+.signupcontent {
+    width: 100%;
+    height: 100%;
+    background: rgb(226, 226, 226);
+    color: black;
+    cursor: pointer;
+    border: 1px solid rgb(112, 112, 112);
+    border-radius: 10px;
+}
+
+.signupcontent:hover {
+    background: black;
+    color: white;
+    transition: 0.3s;
 }
 
 .image2 {
